erDiagram
  SESSIONS {
    TEXT id PK
    TEXT title
    TEXT goal
    TEXT status
    TEXT manager_agent_id
    TEXT provider_id
    TEXT root_workdir
    TEXT created_at
    TEXT updated_at
    TEXT completed_at
  }

  AGENTS {
    TEXT id PK
    TEXT session_id FK
    TEXT name
    TEXT role
    TEXT kind
    TEXT provider_id
    TEXT profile
    TEXT goal
    TEXT status
    TEXT mode
    TEXT workdir
    TEXT current_task_id FK
    TEXT parent_agent_id FK
    TEXT created_by_agent_id FK
    TEXT system_prompt
    TEXT launch_command
    TEXT last_heartbeat_at
    TEXT created_at
    TEXT updated_at
    TEXT archived_at
  }

  TASKS {
    TEXT id PK
    TEXT session_id FK
    TEXT agent_id FK
    TEXT parent_task_id FK
    TEXT title
    TEXT goal
    TEXT description
    TEXT status
    TEXT priority
    TEXT task_type
    TEXT scope_path
    TEXT acceptance_criteria
    TEXT blocking_reason
    TEXT result_summary
    TEXT created_by_agent_id FK
    TEXT started_at
    TEXT completed_at
    TEXT created_at
    TEXT updated_at
  }

  TASK_DEPENDENCIES {
    TEXT id PK
    TEXT session_id FK
    TEXT task_id FK
    TEXT depends_on_task_id FK
    TEXT dependency_type
    TEXT created_at
  }

  TASK_STATUS_HISTORY {
    TEXT id PK
    TEXT session_id FK
    TEXT task_id FK
    TEXT from_status
    TEXT to_status
    TEXT changed_by_agent_id FK
    TEXT note
    TEXT created_at
  }

  MESSAGES {
    TEXT id PK
    TEXT session_id FK
    TEXT thread_id
    TEXT from_type
    TEXT from_agent_id FK
    TEXT to_agent_id FK
    TEXT message_kind
    TEXT text
    TEXT delivery_status
    TEXT related_task_id FK
    TEXT reply_to_message_id FK
    TEXT created_at
    TEXT delivered_at
    TEXT read_at
  }

  AGENT_RUNS {
    TEXT id PK
    TEXT agent_id FK
    TEXT session_id FK
    TEXT provider_id
    TEXT command
    TEXT args_json
    INTEGER pid
    INTEGER exit_code
    TEXT exit_signal
    TEXT status
    TEXT stdout_path
    TEXT stderr_path
    TEXT started_at
    TEXT ended_at
  }

  ARTIFACTS {
    TEXT id PK
    TEXT session_id FK
    TEXT agent_id FK
    TEXT task_id FK
    TEXT kind
    TEXT path
    TEXT title
    TEXT summary
    TEXT created_at
  }

  SESSIONS ||--o{ AGENTS : contains
  SESSIONS ||--o{ TASKS : contains
  SESSIONS ||--o{ MESSAGES : contains
  SESSIONS ||--o{ TASK_DEPENDENCIES : contains
  SESSIONS ||--o{ TASK_STATUS_HISTORY : contains
  SESSIONS ||--o{ AGENT_RUNS : contains
  SESSIONS ||--o{ ARTIFACTS : contains

  AGENTS ||--o{ TASKS : owns
  AGENTS ||--o{ AGENT_RUNS : executes
  AGENTS ||--o{ MESSAGES : sends
  AGENTS ||--o{ MESSAGES : receives
  AGENTS ||--o{ TASK_STATUS_HISTORY : updates
  AGENTS ||--o{ ARTIFACTS : produces
  AGENTS ||--o{ AGENTS : creates
  AGENTS ||--o| TASKS : current_task

  TASKS ||--o{ TASK_DEPENDENCIES : depends
  TASKS ||--o{ TASK_STATUS_HISTORY : history
  TASKS ||--o{ MESSAGES : context
  TASKS ||--o{ ARTIFACTS : outputs
  TASKS ||--o{ TASKS : parent_child

  MESSAGES ||--o{ MESSAGES : replies_to
